--- a/src/mypage.html
+++ b/src/mypage.html
@@ -1,11 +1,66 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ko">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet" href="style.css">
+    <title>mypage</title>
 </head>
 <body>
-    
+    <div class="content-container">
+        <!-- 프로필 카드 -->
+        <div class="box profile-box">
+            <div class="profile-picture">사진</div>
+            <div class="profile-info">
+                <div class="profile-name">이인선</div>
+                <div class="profile-nickname">인선이벌레좋아해</div>
+                <a href="myedit.html" class="edit-button">수정하기</a>
+            </div>
+        </div>
+
+        <!-- 진행 중인 요청 수락 -->
+        <div class="box current-box">
+            <div class="status-title">진행 중인 요청/수락</div>
+            <div class="status-detail">세연이벌레싫어해님의 요청 수락중</div>
+            <a href="mycurrent.html" class="detail-button">상세보기</a>
+            <hr class="divider">
+            <div class="badge">
+                <span>🏴 바퀴벌레 학살자</span>
+                <span>❤️ 고수</span>
+            </div>
+        </div>
+
+        <!-- 요청 내역 보기 -->
+        <div class="box request-history-box">
+            <h2>요청 내역 보기</h2>
+            <hr class="divider">
+            <div class="total-count">총 <span style="color: green;">15</span>회</div>
+            <ul class="history-list">
+                <li class="history-item">
+                    <span class="date">2024/8/29</span>
+                    <span class="bug-type">바퀴벌레</span>
+                    <a href="myrequest.html" class="arrow-button">→</a>
+                </li>
+                <!-- 필요한 경우 다른 항목 추가 -->
+            </ul>
+        </div>
+
+        <!-- 수락 내역 보기 -->
+        <div class="box accept-history-box">
+            <h2>수락 내역 보기</h2>
+            <hr class="divider">
+            <div class="total-count">총 <span style="color: blue;">73</span>회</div>
+            <ul class="history-list">
+                <li class="history-item">
+                    <span class="date">2024/8/29</span>
+                    <span class="bug-type">바퀴벌레</span>
+                    <span class="rating">평점: 5/5</span>
+                    <button class="success-button">성공</button>
+                    <a href="myaccept.html" class="arrow-button">→</a>
+                </li>
+                <!-- 필요한 경우 다른 항목 추가 -->
+            </ul>
+        </div>
+    </div>
 </body>
 </html>
