--- a/src/myaccept.html
+++ b/src/myaccept.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="myaccept.css">
     <title>수락 내역 상세보기</title>
 </head>
 <body>
